src/components/DeleteModal.module.css
.cross {
  position: absolute;
  top: 0.65rem;
  right: 0.65rem;
  cursor: pointer;
  border-radius: 50%;
  width: 1rem;
  height: 1rem;
  padding: 0.65em;
  transition: 200ms;
}

.cross:hover {
  background-color: rgb(241, 241, 241);
}

.icon-container {
  max-width: 5.5rem;
  margin: 1rem auto;
}

.delete-icon {
  width: 5rem;
}

.title {
  margin: -0.5rem 0 0 0;
  font-family: "Jost", sans-serif;
}

.description {
  margin: -2rem 0 0 0;
  font-family: "Jost", sans-serif;
}

.button-div {
  margin-top: -1rem;
  display: flex;
  justify-content: center;
  gap: 10px;
}

button {
  padding: 0.8em 2.3em;
  border: none;
  border-radius: 14px;
  cursor: pointer;
  font-family: "Jost", sans-serif;
  font-weight: 500;
  font-size: 1rem;
  transition: 200ms;
}

.cancel-button:hover {
  background-color: #e8e8e8;
}

.delete-button {
  background: rgb(236, 52, 52);
  color: white;
}

.delete-button:hover {
  background: rgb(223, 49, 49);
}

